# pymine

./: PRD.MD  README.md  pyproject.toml
.serena/: project.yml
.serena/memories/: code_style.md  project_overview.md  suggested_commands.md  task_completion.md  tech_stack.md
PRPs/: README.md  crafting-system.md  save-load-system.md
PRPs/ai_docs/: common_gotchas.md  procedural_generation.md  pygame_patterns.md  pymine_architecture.md
src/pymine/: __init__.py  game.py  physics.py  world.py
tests/: test_physics.py  test_world.py
